@@ -1,3 +1,64 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+- - -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST trine2_linux_installer.run 1631149097 SHA256 39edf004fb4001360bb4b432cd365ab4b14350612e5632df789d568d682177e7 SHA512 d0c402f4f73f45290784c9414a5b59f89513b14bd09ade815d4456a77ae95909082e0a6a1afad198f6f58707a5d10eedbacd30d6cc5d063eabb702b03a7dc56e WHIRLPOOL 888073296772659c87d9955c14ac116c93bcf5da6ec2715e6a74b10520f2dcd94c5e50a794d0833f3242e3c47689f3f0042883b6673c6f8e0563fea829e06ad0
-EBUILD trine2-1.16.ebuild 2106 SHA256 d37d794ef01eecaacb4477d56180b79ddae939bf2cba51e5eecc6ed5273168bd SHA512 b8296d6ac2881d6ffb1f7819318c54ab354f10cc9444cd2ee0196711092942da97122785e1a82e34a5d4baf8d6b13d184ab3de2595b5ab0028af4baa9c7ad359 WHIRLPOOL b9174725fb47f2f391939c313c75d4c1137b079d18c7dad306092154949171a4dd7cdf4b5bc918adbc69c195f2da5377d110e0ed936debc5b0842b90669b5db5
-MISC metadata.xml 269 SHA256 07715f95e2b17c5ee4878d15646f26016bf5fd07bb06b809a63d16f20a739f56 SHA512 8459185f0fff0882553efa31a3dd3bfcabeca002ef2e3a5c86db128379bf52a7041d1c865b7a36a23652a008596993f4be3f9bfb940b922c4099e8bb268857be WHIRLPOOL 84eb2ef7951f288ac3783adf2fbac289bead857aa85544a2785a2317fe73639cc6a46a2572201a34416b9d53f9a7aca648090628ca68228901d0e12dc11690ae
+EBUILD trine2-1.16.ebuild 2469 SHA256 fe9091d3fc7bc98d8eca81238964bc62720744d69c8e6dee9b86af49c4925a72 SHA512 b51a708ccc459dc207852752826e76b8d63b1c3fa419c5bb01e7ee722bc92202ba65b71e335515c6f5f3eb03ea84e19d353b097ee5f0aeae93247fb030debd1b WHIRLPOOL aa11b0319f657bf91de54f8d7b2f1d14e3fe35bcc8efeacc80d61c9c1ef4632b1d3d12a7eaf040ce8de064ff86e01bd44f6deb04c1ae6bb47ea5ff9d703faa91
+MISC ChangeLog 295 SHA256 ec278954e29c53ba756072cf020e23b373afc8387151358499fca33533709f90 SHA512 04521dfabb2b1f346c7bd76ba6835bf040116d7b042c891b7af13fd1d5331bf8c3bbe466351325ce6a7b87bc130f27d5f6320ef3e19f871a5f05730127e1ba8a WHIRLPOOL 73a55ddc04ae9bd06bbed9c8d95573fb6deba51fab16d0877f43aa6f10ded4688402575c9cb0eb35fc651f75b827e48f7b90a7e9691d7ea23075f59719465157
+MISC metadata.xml 268 SHA256 e0fc98afb27063eb11fb99ad8b55c25682cf98cf4bdfb6b945596220b8dd2de1 SHA512 20e1b809ced9fe3e457597ea976ea77e0d4381b825e62f45813791edfe0bf817af3f249ca31bc4db53c46b764b6d51792b1c7a4cf4236d1f28d0057910cb1b53 WHIRLPOOL a6645f121f55fcbd7381c6333769ffa0e8a350df53189beaa0ba4ab051441353b37a6218ad32e524a4b4f63e95d4214f469d6c9bc47e0123f6753248de0d7fbe
+- - -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQg9g4AAoJECZQPTSbOzNL2AIP/2DbnO43MRn4RLe2KSwnQe4r
+t36+1V52kATDZoyU6U8WrvFxa8QQVWfA+qfa4bdIDYLbViHAlBLJsA+i+qF6ql97
+2YNCUh89iCGmf8CR8kqDyI035Sekgku7gn2bSpxODo/oUtI82kWjWHMPiSZ2EBrT
+THHz5FEUMCjngV+DEndJuWBC9nlH588RhiD+LfL3ktPKDcwqt44ra8hgb1v3oTR3
+pJ+k5XyFMsLNLPNtUHrX7IYG3L0O7VXwMOGvZVExDvTwXRLndyRZG9lx8De16p45
+96X17c+b9JQh/FxigjGVsyxoqyIIy7p5OPTBV/kG2fQulMcGCvq5NxxeIzkMwLqp
+KtZ6OKyAEAJGgeHv1OLLuTVAS3rfPbo4HKM5u2PjCX6OctSeGrXjvopej571ytWd
+X8rTZopZI4VkkLQEmOItoJKpvAgLwb/jWse94da3Q+JBR/B/Lv12pFzPwV2+EmEm
+gHEvpy+7uddHkAqkEn36gFxWdNcr5Z6T0V17TwBLhBDxbq0XenDlcNACZyQIZQZx
+3OluTzgyDKNKA/sQA40hZMxsVvfzEss5QFULqG2v2QCxW+6fnyszw60TmhPe1g7l
+8oF9UIWQyy3CubmLiMt9xq/jWwlMY1Mqx2/PBH/Ingt/PgZFbciYdGuZmFOIcVFw
+DWAAYDnUe5iAwQPuh/PD
+=bNef
+- - -----END PGP SIGNATURE-----
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQg9oFAAoJECZQPTSbOzNLfzkQAK2toq1C4dyPRC1m2tnsbAMe
+hgv+TDSlXCgRKIlDGxM14bLA2NH2SY4OHF1xerqDlQ3rBYjRuzydTf8cIU+lQ0ta
+Rd/zvgtnuoKdIVGPXnHbN/a9bSaDL70NDyH82ukwojqX+jUrDX6+UooYRnHqaEMb
+uDTYlpIMDM7yVlvS+qv+++G2P4xjGEl/+VTrFSfEjf/rzu1+lk1IvYxrzsH6e+6B
+aiFLyAl40bz1fe11YRWR800DvBDMOUuTfHhtplNoSi7E6U2Rd1TfWZ3rmHsUIaq1
+eC7+uplJ602L3ZUm6mKvdPuocGQLY3mcjme7/tV/BR/ZhQ/h/ftg2RJH3XTFrjwV
+BYyyn8S2UsexuCjefWpu7cFu4X5TGCmCGyc0WqyNZyr3Uv8hkbjZGOmwC6RpJJ6L
+q7Rg+mMbPovGjy5VL+7MyhLjl8qeWheSBpX64ZVrZ4UHlSrkvt+HBltKmlm6bznS
+7zoehqEIw07kKEGo45R0ZDADqC7M/UuGlUn4BnJjMqprof0Ou1MwJ9O+z4Dg1mw4
+Gmcn8vznNdZN4/cVT/87BYWNLYlLalJVyJ/BWc6YxEoT0q1DdOgcN/kBJBbnYPMq
+f1QDTN5UqGXvVOtSljzStX3H6yLM/GcUVvKzCPWKQzRT7jc7QJJvSTGIHNvxBvuw
+t0NtCK0cp1SgPfdSWP8u
+=OvIN
+- -----END PGP SIGNATURE-----
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQg9pAAAoJECZQPTSbOzNLTWMP/0Cf378DBMb8fcOqX+yWSQe8
+/+7MLJ/a966EFDMEtQ6SwdQcma3A4VnLES8X9VKmWF44VueYe3Jbv8MB0V48JBk6
+O8drBE2SlZu48x+T+ML5961rC+XVKMqEhz6jlfycwvKOmPGehkADklIHvz20Zql7
+y1pi2thtbwJZkHsH3EmEJUJSCNwIqu1hNrkCry/q/Vgwjky5CH7KHHKwhE5ptFGC
+yfYYlGpaMgWt9XyhG+dk9wcBXnjK21tw2AQGXBJU9Ye4NAJk1y7g6S8REegeaap/
+9z9yrJmv1S9wt0ml7ZMmUkmAZMDra/y5BDbLibT5+oxMUdGxdP6S9BN46dCzbS42
+LVoUd0T0KCBzVcf1niiNlGge0NU0aJBE34MAAarAQbA7CJse5hfi2xcHQRhoON30
+YAAJqXUMW2BVtVo/Hv9bTM4Me7X1QXNCje0Mb5k+byfg0D1p+xytea97IiU0gsV3
+gPJ7g+frGeEDEv0b1ruFlBh0XYitTInl34e3Tz5VmFYs1rxLuRl2W7oD8pDmX22A
+jFXOjRXZYKEq6bqZt8Rcbd1yLHprPK/LgvesPMhM1sUivRx8b4BhOxyER+2NOqku
+Pguf7buwfUrkeYPzmLt4Ta0uB1frhiwsNqXgVJ0PLUvyQzo3ijbeKuPjaksU+PJQ
+P9Flu+fm+wbsWR2bgmqA
+=UtdW
+-----END PGP SIGNATURE-----
