@@ -3,7 +3,7 @@
 <pkgmetadata>
 <maintainer>
         <email>mva@mva.name</email>
-        <name>Vadim A. Misbakh-Soloviov</1name>
+        <name>Vadim A. Misbakh-Soloviov</name>
 </maintainer>
 <herd>games</herd>
 </pkgmetadata>
