@@ -2,9 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2012; Misbakh-Soloviov Vadim A. <mva@gentoo.org> metadata.xml,
+  trine2-1.16.ebuild:
+  [games-action/trine2] fixed path, added optionality to install GTK Launcher
+
 *trine2-1.16 (21 Oct 2012)
 
   21 Oct 2012; Misbakh-Soloviov Vadim A. <mva@gentoo.org> +trine2-1.16.ebuild,
   +metadata.xml:
-  [games-rpg/trine2] Added 1.16 version of Trine2
-
+  [games-action/trine2] Added 1.16 version of Trine2
